added endpoint for CAS
